# OpenAlexMCP

./: .env.example  .gitignore  CLAUDE.md  MANIFEST.in  Makefile  PACKAGING.md  README.md  claude_config_examples.json  example_usage.py  pyproject.toml  pytest.ini  run_tests.py
src/openalex_mcp/: __init__.py  client.py  config.py  logutil.py  models.py  server.py  tools.py
tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_integration.py  test_logging.py  test_models.py  test_server.py  test_tools.py
