[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openalex-mcp"
version = "1.0.0"
description = "A Model Context Protocol (MCP) server providing access to the OpenAlex scholarly database with 240M+ works, authors, institutions, and venues"
authors = [
    {name = "OpenAlex MCP", email = "info@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "openalex", "scholarly", "research", "academic", "papers", "citations"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "anyio>=3.0.0"
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0"
]

[project.urls]
Homepage = "https://github.com/your-username/openalex-mcp"
Repository = "https://github.com/your-username/openalex-mcp"
Documentation = "https://github.com/your-username/openalex-mcp#readme"
"Bug Reports" = "https://github.com/your-username/openalex-mcp/issues"

[project.scripts]
openalex-mcp = "openalex_mcp.server:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true

